fix loading of smbj on macOS-aarch64